--- a/style.css
+++ b/style.css
@@ -372,3 +372,8 @@ button:hover {
 .edit-confirm-btn:focus {
     background: #383b5c;      
 }
+
+
+.task:focus {
+    outline: 2px solid #4CAF50;
+}
